mail/postfixadmin/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: httpsredirect
  namespace: tools
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist-privnets
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
      - 10.0.0.0/8
      - 172.16.0.0/12
