mail/postfixadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfixadmin
  labels:
    app.kubernetes.io/name: postfixadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postfixadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postfixadmin
    spec:
      containers:
        - name: postfixadmin
          image: postfixadmin:3.3.13-apache
          ports:
          - name: http
            containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: 512M
            requests:
              cpu: "500m"
              memory: 512M
  revisionHistoryLimit: 1
