mail/postfixadmin/service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: postfixadmin-svc
spec:
  selector:
    app.kubernetes.io/name: postfixadmin
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
