mail/postfixadmin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postfixadmin-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`postfixadmin.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: httpsredirect
    - name: ipwhitelist-privnets
    services:
    - name: postfixadmin-svc
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postfixadmin-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: postfixadmin-k8s-lenin-nu
  routes:
  - match: Host(`postfixadmin.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: ipwhitelist-privnets
    services:
    - name: postfixadmin-svc
      port: 80
